fixing overflow problems

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,7 +60,6 @@ html {
   scroll-behavior: auto !important;
   overscroll-behavior: none;
   background:var(--color-background);
-  overflow-x: hidden !important;
 }
 
 body {
@@ -68,7 +67,6 @@ body {
   color: rgb(0, 0, 0);
   margin: 0;
   padding: 0;
-  overflow-x: hidden !important;
   display: flex;
   justify-content: center;
 }
